adjusting comment layout, try to avoid line wrap

--- a/VocaDbWeb/Content/Styles/base.less
+++ b/VocaDbWeb/Content/Styles/base.less
@@ -195,6 +195,10 @@ body .container-fluid {
 	display: block;
 }
 
+.comment-date {
+	font-size: small;
+}
+
 // Archived entries
 .archived-entry-compare-modified {
 	font-weight: bold;
